# Jewel-finance

./: Anchor.toml  LICENSE  README.md  package.json
app/jewel-bank/: package.json
app/jewel-bank/public/: index.html
app/jewel-farm/: package.json
app/jewel-farm/public/: index.html  jewel_bank.json  jewel_farm.json
app/jewel-farm/src/: App.vue
lib/jewel_common/: Cargo.toml
lib/jewel_common/src/: errors.rs
programs/jewel_bank/: Cargo.toml
programs/jewel_bank/src/: lib.rs
programs/jewel_bank/src/instructions/: add_to_whitelist.rs  deposit_jewel.rs  deposit_jewel_pnft.rs  init_vault.rs  mod.rs  record_rarity_points.rs  remove_from_whitelist.rs  set_vault_lock.rs  shared.rs  update_vault_owner.rs  withdraw_jewel.rs  withdraw_jewel_pnft.rs  withdraw_tokens_auth.rs
programs/jewel_bank/src/state/: bank.rs  jewel_deposit_receipt.rs  mod.rs  vault.rs  whitelist_proof.rs
programs/jewel_farm/: Cargo.toml
programs/jewel_farm/src/: lib.rs  number128.rs
scripts/: cp_idl.sh  get_pk.sh  update_fe.sh
src/: index.ts
src/jewel-bank/: index.ts  jewel-bank.client.ts  jewel-bank.pda.ts
src/jewel-common/: pnft.ts
src/jewel-farm/: index.ts  jewel-farm.client.ts  jewel-farm.pda.ts
src/types/: jewel_bank.ts  jewel_farm.ts
tests/jewel-bank/: jewel-bank.looper.test.ts  jewel-bank.pnft.ts  jewel-bank.spec.ts  withdraw-tokens-auth.test.ts
tests/jewel-farm/: gem-farm.tester.ts
tests/jewel-farm/fixed-rate/: jewel-farm.fixed-rate.funding.test.ts  jewel-farm.fixed-rate.staking.test.ts
tests/jewel-farm/rate-agnostic/: jewel-farm.farmer-lifecycle.test.ts  (+4 more)
(+53 files in other folders)
