[package]
name = "jewel_bank"
version = "0.1.0"
description = "safely store and manage your jewel collection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jewel_bank"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
mpl-token-metadata = { version="1.8.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.1.0"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
jewel_common = {path='../../lib/jewel_common'}
proc_macros = {path='../../lib/proc_macros'}
arrayref = "0.3.6"
